--- a/client/src/assets/scss/Clients/ClientsListAndEdit.scss
+++ b/client/src/assets/scss/Clients/ClientsListAndEdit.scss
@@ -59,7 +59,7 @@
                 }
                 .ClientsListAndEdit_table_wrapper{
                     width: 100%;
-                    height: 80%;
+                    height: 60vh;
                     overflow-y: auto; 
                     overflow-x: hidden;
                     scrollbar-width: thin;
@@ -96,6 +96,7 @@
                                 z-index: 1;
                                 text-align: center;
                                 background-color: #808080;
+                                border: 1px solid #808080;
                                 .ClientsListAndEdit_table_title_content_vertical{
                                     color: #fff;
                                     border: none;
@@ -112,7 +113,7 @@
                                         background-color: #e0e0e0;
                                     }
                                     .ClientsListAndEdit_table_body_content_vertical{
-                                        border: none;
+                                        border: 1px solid  #d0cdcd;
                                         text-align: center;
                                         .delete-icon{
                                             color: red;
