--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -3,14 +3,15 @@
     .employeeExpensesList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        // width: 100vw; 
+        
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .employeeExpensesList_wrapper_div{
-                    width: 84%;
+                    width: 84%; // i do not know wjy but it breaks if i set to 100%
                     padding: 10px 30px 10px 30px;
                     .employeeExpensesList_top_content{
+                        
                         position: relative;
                         display: flex;
                         background-color: #fff;
@@ -59,7 +60,7 @@
                             }
                             .employeeExpensesList_table_wrapper{
                                 width: 100%;
-                                height: 80%;
+                                height: 60vh;
                                 overflow-y: auto; 
                                 overflow-x: hidden;
                                 scrollbar-width: thin;
@@ -91,7 +92,7 @@
                                     overflow-x: auto;
                                     padding: 0px 0px 0px 0px;
                                 }
-                                .employeeExpensesList_table_cont{
+                                .employeeExpensesList_table_cont{                                    
                                     .table{
                                         width: 100%;
                                         .employeeExpensesList_table_title{
@@ -100,6 +101,7 @@
                                             z-index: 1;
                                             text-align: center;
                                             background-color: #808080;
+                                            border: 1px solid #808080;
                                             .employeeExpensesList_table_title_content_vertical{
                                                 color: #fff;
                                                 border: none;
@@ -138,7 +140,7 @@
                                                   }
                                                 .employeeExpensesList_txt0{
                                                     margin-bottom: 5px;
-                                                    padding: 5px;
+                                                    padding: 2px;
                                                     font-weight: bold;
                                                     font-size: 14px;        
                                                 }
