--- a/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
+++ b/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
@@ -43,7 +43,7 @@
                     }
                     .expensesList_table_wrapper{
                         width: 100%;
-                        height: 80%;
+                        height:60vh;
                         overflow-y: auto; 
                         overflow-x: hidden;
                         scrollbar-width: thin;
@@ -74,7 +74,7 @@
                         .expensesList_table_cont.editScrollable {
                             overflow-x: auto;
                             padding: 0px 0px 0px 0px;
-
+                            
                         }
                         .expensesList_table_cont{
                             table{
@@ -85,6 +85,7 @@
                                     z-index: 1;
                                     text-align: center;
                                     background-color: #808080;
+                                    border: 1px solid #808080;
                                     .expensesList_table_title_content_vertical{
                                         color: #fff;
                                         border: none;
@@ -121,7 +122,7 @@
                                             background-color: #e0e0e0;
                                         }
                                         .expensesList_table_body_content_vertical{
-                                            border: none;
+                                            border: 1px solid  #d0cdcd;
                                             text-align: center;
                                             input{
                                                 width: 70px;
