--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -7,7 +7,7 @@
             flex-direction: column;
         }
         .projectsList_wrapper{
-            width: 100%;
+            width: 84%; // i do not know wjy but it breaks if i set to 100%
             padding: 10px 30px 10px 30px;
             .projectsList_top_content{
                 position: relative;
@@ -37,12 +37,12 @@
                 }
                 .projectsList_mid_body_cont{
                     height: 100%;
-                    
+                    background-color: #fff;
                     .ListButtons_btn{
                     }
                     .projectsList_table_wrapper{
                         width: 100%;
-                        height: 80%;
+                        height: 60vh;
                         overflow-y: auto; 
                         overflow-x: hidden;
                         scrollbar-width: thin;
@@ -75,7 +75,9 @@
                             padding: 0px 0px 0px 0px;
                             
                         }
-                        .projectsList_table_cont{     
+                        .projectsList_table_cont{  
+                            overflow-x: auto;
+   
                             .table{
                                 width: 100%;
                                 .projectsList_table_title{
@@ -84,6 +86,7 @@
                                     z-index: 1;
                                     text-align: center;
                                     background-color: #808080;
+                                    border: 1px solid #808080;
                                     .projectsList_table_title_content_vertical{
                                         color: #fff;
                                         border: none;
@@ -102,7 +105,7 @@
                                             background-color: #e0e0e0;
                                         }
                                         .projectsList_table_body_content_vertical{
-                                            border: none;
+                                            border: 1px solid  #d0cdcd;
                                             text-align: center;
                                         }
                                         .delete-icon{
@@ -128,7 +131,6 @@
                             align-items: center;
                             gap: 1%;
                             padding: 5px 20px 5px 20px;
-                            // padding: 2px 13px;
                             border-radius: 7px;
                             margin-top: 6px;
                             background: #66d1ff;
