--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import './Components/AlertModal.scss';
 @import './Components/Button.scss';
 @import './Components/Card.scss';
+@import './Components/CrudModal.scss';
 @import './Components/DropDown.scss';
 @import './Components/Footer.scss';
 @import './Components/GraphDashboard.scss';
