--- a/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
+++ b/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
@@ -131,6 +131,9 @@
                         }
                     }
                 }
+                .BusinessDivisionsListAndEdit_table_wrapper.editMode{
+                    height: 55vh;
+                }
                 .BusinessDivisionsListAndEdit_is_editing_wrapper{
                     .BusinessDivisionsListAndEdit_is_editing_cont{
                     }
