--- a/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
@@ -146,6 +146,9 @@
                             }
                         }
                     }
+                    .costOfSalesList_table_wrapper.editMode{
+                        height: 55vh;
+                    }
                 }
             }
         }
