--- a/client/src/assets/scss/Users/UsersListAndEdit.scss
+++ b/client/src/assets/scss/Users/UsersListAndEdit.scss
@@ -121,6 +121,9 @@
                         }
                     }
                 }
+                .UsersListAndEdit_table_wrapper.editMode{
+                    height: 55vh;
+                }
                 .UsersListAndEdit_is_editing_wrapper{
                     .UsersListAndEdit_is_editing_cont{
                     }
