--- a/client/src/assets/scss/Clients/ClientsListAndEdit.scss
+++ b/client/src/assets/scss/Clients/ClientsListAndEdit.scss
@@ -125,6 +125,9 @@
                         }
                     }
                 }
+                .ClientsListAndEdit_table_wrapper.editMode{
+                    height: 55vh;
+                }
                 .ClientsListAndEdit_is_editing_wrapper{
                     .ClientsListAndEdit_is_editing_cont{
                     }
