--- a/client/src/assets/scss/Users/UsersRegistration.scss
+++ b/client/src/assets/scss/Users/UsersRegistration.scss
@@ -42,8 +42,31 @@
                 .UsersRegistration_mid_form_cont{
                     background-color: #EFEDEA;
                     border-radius: 5px;
-
                     margin: 0px 40px;
+                    overflow-y: auto;
+                    overflow-x: hidden;
+                    scrollbar-width: thin; 
+                    scrollbar-color: transparent transparent;
+                    border-radius: 5px;
+                    &:hover {
+                        scrollbar-color: #888 #EFEDEA; 
+                    }
+                    &::-webkit-scrollbar {
+                        width: 8px;
+                    }
+                    &::-webkit-scrollbar-track {
+                        background: transparent; 
+                    }
+                    &::-webkit-scrollbar-thumb {
+                        background-color: transparent; 
+                        border-radius: 10px;
+                    }
+                    &:hover::-webkit-scrollbar-thumb {
+                        background-color: #888;
+                    }
+                    &:hover::-webkit-scrollbar-thumb:hover {
+                        background-color: #555; 
+                    }    
                     .UsersRegistration_top-form-input-div{
                         padding: 25px 0px 0px 20px;
                         .UsersRegistration_username-div{
