--- a/client/src/assets/scss/BusinessDivisions/BusinessDivisionsRegistration.scss
+++ b/client/src/assets/scss/BusinessDivisions/BusinessDivisionsRegistration.scss
@@ -1,17 +1,11 @@
 .BusinessDivisionsRegistration_wrapper{
     display: flex;
     flex-direction: column;
-    .RegistrationButtons_title_container{
-        padding: 58.5px 70px 50px 70px !important;
-        @media only screen and (min-width: 1920px){
-            padding: 59.5px 70px 50px 70px !important;
-        }
-    }
     .BusinessDivisionsRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
         width: 100%;
-        height: 95vh;
+        height: 100%;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
@@ -28,10 +22,10 @@
                 background-color: #fff;
             }
             .BusinessDivisionsRegistration_inputs_and_buttons{
-            display: flex;
-            height: 65vh;
-            justify-content: space-between;
-            flex-direction: column;
+                display: flex;
+                height: 65vh;
+                justify-content: space-between;
+                flex-direction: column;
             }
             .BusinessDivisionsRegistration_mid_body_cont{
                 background-color: #fff;
