--- a/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
@@ -1,17 +1,11 @@
 .costOfSalesRegistration_wrapper{
     display: flex;
     flex-direction: column;
-    .RegistrationButtons_title_container{
-        padding: 54.5px 70px 50px 70px !important;
-          @media only screen and (min-width: 1920px){
-            padding: 59.5px 70px 50px 70px !important;
-        }
-    }
     .costOfSalesRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw;
-        height: 95vh;
+        width: 100%;
+        height: 100%;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
