--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesRegistration.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesRegistration.scss
@@ -1,16 +1,10 @@
 .employeeExpensesRegistration_wrapper{
   max-width: 2560px;
-  .RegistrationButtons_title_container{
-    padding: 54.5px 70px 50px 70px !important;
-     @media only screen and (min-width: 1920px){
-            padding: 59.5px 70px 50px 70px !important;
-    }
-  }
   .employeeExpensesRegistration_cont_wrapper{
     display: flex;
     background-color: #EFEDEA;
-    width: 100vw;
-    height: 95vh;
+    width: 100%;
+    height: 100%;
     @media only screen and (max-width: 1000px){
         flex-direction: column;
     }
