--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -1,18 +1,11 @@
 .EmployeesRegistration_wrapper{
     display: flex;
     flex-direction: column;
-
-    .RegistrationButtons_title_container{
-        padding: 58.5px 70px 50px 70px !important;
-        @media only screen and (min-width: 1920px){
-            padding: 59.5px 70px 50px 70px !important;
-        }
-    }
     .EmployeesRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
         width: 100%;
-        height: 95vh;
+        height: 100%;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
