--- a/client/src/assets/scss/Projects/ProjectsRegistration.scss
+++ b/client/src/assets/scss/Projects/ProjectsRegistration.scss
@@ -1,17 +1,11 @@
 .projectsRegistration_wrapper{
     display: flex;
     flex-direction: column;
-    .RegistrationButtons_title_container{
-        padding: 58.5px 70px 50px 70px !important;
-        @media only screen and (min-width: 1920px){
-            padding: 59.5px 70px 50px 70px !important;
-        }
-    }
     .projectsRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw;
-        height: 95vh;
+        width: 100%;
+        height: 100%;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
@@ -26,8 +20,6 @@
             .projectsRegistration_top_body_cont{
                 margin: 2rem 0 0 0;
                 background-color: #fff;
-                .projectsRegistration_top_btn_cont{
-                }
             }
             .projectsRegistration_inputs_and_buttons{
                 display: flex;
