--- a/client/src/assets/scss/Users/UsersRegistration.scss
+++ b/client/src/assets/scss/Users/UsersRegistration.scss
@@ -1,17 +1,11 @@
 .UsersRegistration_wrapper{
     display: flex;
     flex-direction: column;
-    .RegistrationButtons_title_container{
-        padding: 58.5px 70px 50px 70px !important;
-        @media only screen and (min-width: 1920px){
-            padding: 59.5px 70px 50px 70px !important;
-        }
-    }
     .UsersRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw;
-        height: 95vh;
+        width: 100%;
+        height: 100%;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
@@ -34,7 +28,7 @@
                 flex-direction: column;
             }
             .UsersRegistration_mid_body_cont{
-                background-color: #fff;
+                // background-color: #fff;
                 height: 90%;
                 @media only screen and (min-width: 1875px){
                     height: 55vh;
