--- a/client/src/assets/scss/Components/ListButtons.scss
+++ b/client/src/assets/scss/Components/ListButtons.scss
@@ -2,6 +2,10 @@
     margin-left: 40px;
     display: flex;
     gap: 2%;
+    @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+      /* For small laptops */
+      padding-top: 50px;
+    }
     .body-btn{
         margin-top: 15px;
         border: 1px solid #808080;
