--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -1,4 +1,5 @@
 .EmployeesListAndEdit_wrapper{
+    width: 100%;
     max-width: 2560px;
     .EmployeesListAndEdit_cont_wrapper{
         display: flex;
@@ -9,6 +10,10 @@
         .EmployeesListAndEdit_maincontent_wrapper{
             width: 100%; 
             padding: 10px 30px 10px 30px;
+            @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                /* For small laptops */
+                width: 80%;
+            }
             .EmployeesListAndEdit_top_content{
                 position: relative;
                 display: flex;
@@ -54,8 +59,6 @@
                 }
                 .EmployeesListAndEdit_mid_body_cont{
                     height: 100%;
-                    .ListButtons_btn{
-                    }
                 }
                 .EmployeesListAndEdit_table_wrapper{
                     width: 100%;
@@ -92,8 +95,16 @@
                         padding: 0px 0px 0px 0px;
                         }
                     .EmployeesListAndEdit_table_cont{
+                        @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                            /* For small laptops */
+                            overflow-x: auto;
+                        }
                         table{
                             width: 100%;
+                            @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                /* For small laptops */
+                                width: 150%;
+                            }
                             .EmployeesListAndEdit_table_title{
                                 position: sticky;
                                 top: 0;
