--- a/client/src/assets/scss/Users/UsersRegistration.scss
+++ b/client/src/assets/scss/Users/UsersRegistration.scss
@@ -28,13 +28,14 @@
                 flex-direction: column;
             }
             .UsersRegistration_mid_body_cont{
-                // background-color: #fff;
+                background-color: #fff;
                 height: 90%;
                 @media only screen and (min-width: 1875px){
                     height: 55vh;
                 }
                 .UsersRegistration_mid_form_cont{
                     background-color: #EFEDEA;
+                    // padding: 15px 20px;
                     border-radius: 5px;
                     margin: 0px 40px;
                     overflow-y: auto;
@@ -78,6 +79,10 @@
                                     height: 40px;
                                     border: 1px solid #000;
                                     border-radius: 10px;
+                                    @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                        /* For small laptops */
+                                        width: 250px;
+                                    }
                                 }
                                 input::placeholder{
                                     padding-left: 10px;
@@ -111,6 +116,10 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                        @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                            /* For small laptops */
+                                            width: 250px;
+                                        }
                                     }
                                     input::placeholder{
                                         padding-left: 10px;
@@ -130,6 +139,10 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                        @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                            /* For small laptops */
+                                            width: 250px;
+                                        }
                                     }
                                     input::placeholder{
                                         padding-left: 10px;
@@ -149,6 +162,10 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                        @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                            /* For small laptops */
+                                            width: 250px;
+                                        }
                                     }
                                     input::placeholder{
                                         padding-left: 10px;
@@ -172,6 +189,10 @@
                                             height: 40px;
                                             border: 1px solid #000;
                                             border-radius: 10px;
+                                            @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                                /* For small laptops */
+                                                width: 250px;
+                                            }
                                         }
                                         input::placeholder{
                                             padding-left: 10px;
@@ -202,6 +223,10 @@
                                             height: 40px;
                                             border: 1px solid #000;
                                             border-radius: 10px;
+                                            @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                                /* For small laptops */
+                                                width: 250px;
+                                            }
                                         }
                                         input::placeholder{
                                             padding-left: 10px;
@@ -215,6 +240,10 @@
                                         font-size: 10px;
                                         width: 51%;
                                         color: #9C9C9C;
+                                        @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                            /* For small laptops */
+                                            width: 55%;
+                                        }
                                     }
                                 }
                                 .UsersRegistration_confirm_email-div{
@@ -232,6 +261,10 @@
                                             height: 40px;
                                             border: 1px solid #000;
                                             border-radius: 10px;
+                                            @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                                                /* For small laptops */
+                                                width: 250px;
+                                            }
                                         }
                                         input::placeholder{
                                             padding-left: 10px;
