Added columns to employees table and updated List/Edit/Registration Screens

--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -130,6 +130,7 @@
                                     .EmployeesListAndEdit_table_body_content_vertical{
                                         border: 1px solid  #d0cdcd;
                                         text-align: center;
+                                        width: 60px;
                                         .edit_input{
                                             width: 100px;
                                         }
