--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -94,6 +94,67 @@
                                         border-radius: 10px;
                                     }
                                 }
+                                 .EmployeesRegistration_type-div{
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .type-label{
+                                        margin-bottom: 5px;
+                                    }
+                                    .type-option{
+                                        // width: 400px;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                        option{
+                                            text-align: left;
+                                        }
+                                    }
+                                }
+                                .EmployeesRegistration_business_division_name-div{
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .EmployeesRegistration_business_division_name{
+                                        margin-bottom: 5px;
+                                    }
+                                    .EmployeesRegistration_select-option{
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                        option{
+                                            text-align: left;
+                                        }
+                                    }
+                                }
+                                .EmployeesRegistration_welfare_expense-div{
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .welfare_expense{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }        
+                                }
+                            }
+                            .EmployeesRegistration_mid-form-content-div{
+                                .EmployeesRegistration_first_name-div{
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .first_name{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
                                 .EmployeesRegistration_salary-div{
                                     display: flex;
                                     flex-direction: column;
@@ -107,13 +168,39 @@
                                         border-radius: 10px;
                                     }
                                 }
-                            }
-                            .EmployeesRegistration_mid-form-content-div{
-                                .EmployeesRegistration_first_name-div{
+                                    .EmployeesRegistration_bonus_and_fuel_allowance-div{
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .first_name{
+                                    .bonus_and_fuel_allowance{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .EmployeesRegistration_executive_renumeration-div{
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .executive-renumeration-label{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
+                            }
+                            .EmployeesRegistration_right-form-content-div{
+                                .EmployeesRegistration_email-div{
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .email{
                                         margin-bottom: 5px;
                                     }
                                     input{
@@ -138,38 +225,19 @@
                                         }
                                     }
                                 }
-                            }
-                            .EmployeesRegistration_right-form-content-div{
-                                .EmployeesRegistration_email-div{
+                                .EmployeesRegistration-statutory_welfare_expense-div{
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .email{
+                                    .statutory_welfare_expense{
                                         margin-bottom: 5px;
                                     }
                                     input{
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
-                                    }
+                                    }        
                                 }
-                                .EmployeesRegistration_business_division_name-div{
-                                    display: flex;
-                                    flex-direction: column;
-                                    margin-bottom: 10px;
-                                    .EmployeesRegistration_business_division_name{
-                                        margin-bottom: 5px;
-                                    }
-                                    .EmployeesRegistration_select-option{
-                                        height: 40px;
-                                        border: 1px solid #000;
-                                        border-radius: 10px;
-                                        option{
-                                            text-align: left;
-                                        }
-                                    }
-                                }
-                               
                             }
                         }
                     }
