--- a/client/src/assets/scss/Expenses/ExpensesRegistration.scss
+++ b/client/src/assets/scss/Expenses/ExpensesRegistration.scss
@@ -111,6 +111,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                                 .expensesRegistration_travel_expenses-div{
                                     display: flex;
@@ -124,6 +129,11 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
                                     }
                                 }
                                 .expensesRegistration_transaction_fees-div{
@@ -139,6 +149,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                                 .expensesRegistration_professional_services_fees-div{
                                     display: flex;
@@ -152,6 +167,11 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
                                     }
                                 }
                             }
@@ -186,6 +206,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                                 .expensesRegistration_communication_expenses-div{
                                     display: flex;
@@ -200,6 +225,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                                 .expensesRegistration_advertising_expenses-div{
                                     display: flex;
@@ -213,6 +243,11 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
                                     }
                                 }
                             }
@@ -230,6 +265,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                                 .expensesRegistration_depreciation_expenses-div{
                                     display: flex;
@@ -243,6 +283,11 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
                                     }
                                 }
                                 .expensesRegistration_utilities_expenses-div{
@@ -258,6 +303,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                                 .expensesRegistration_entertainment_expenses-div{
                                     display: flex;
@@ -271,6 +321,11 @@
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
                                     }
                                 }
                             }
