--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -106,6 +106,11 @@
                                         border: 1px solid #000;
                                         border-radius: 10px;
                                     }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
                                 }
                             }
                             .EmployeesRegistration_mid-form-content-div{
