--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -74,7 +74,7 @@
                                 width: 0;
                             }
                             scrollbar-width: none; 
-                        }
+                        }                         
                         .projectsList_table_cont.editScrollable {
                             overflow-x: auto;
                             padding: 0px 0px 0px 0px;
@@ -82,9 +82,27 @@
                         }
                         .projectsList_table_cont{  
                             overflow-x: auto;
-   
+                            &::-webkit-scrollbar {
+                                width: 8px;
+                            }
+                            &::-webkit-scrollbar-track {
+                                background: #e0e0e0;
+                            }
+                            &::-webkit-scrollbar-thumb {
+                                background-color: #888;
+                                border-radius: 10px;
+                            }
+                            &::-webkit-scrollbar-thumb:hover {
+                                background-color: #555;
+                            }
+                            &:not(:hover) {
+                                &::-webkit-scrollbar {
+                                    width: 0;
+                                }
+                                scrollbar-width: none; 
+                            }                         
                             .table{
-                                width: 125%;
+                                width: 130%;
                                 .projectsList_table_title{
                                     position: sticky;
                                     top: 0;
