--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -135,7 +135,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
-                                        background-color: #FBFAF9; 
+                                        background-color: #EFEEEC;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -222,6 +222,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
+                                        background-color: #EFEEEC;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -266,7 +267,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
-                                        background-color: #FBFAF9;
+                                        background-color: #EFEEEC;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
