Fixed Display by projects

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -18,6 +18,7 @@
 @import './Components/TablePlanning.scss';
 @import './Dashboard/Dashboard.scss';
 @import './Planning/PlanningListAndEdit.scss';
+@import './Planning/TablePlanningB.scss';
 @import './Projects/ProjectsRegistration.scss';
 @import './Projects/ProjectsListAndEdit.scss';
 @import './EmployeeExpenses/EmployeeExpensesRegistration.scss';
